# cargo-flatpak

./: Cargo.toml
src/: lib.rs
src/util/: cli.rs  mod.rs  path.rs
