[package]
name = "cargo-flatpak"
version = "0.0.1"
edition = "2021"
description = "TODO"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"]}
colored = "2.0.0"
env_logger = "0.9.1"
home = "0.5.4"
log = "0.4.17"
once_cell = "1.15.0"
textwrap = { version = "0.16.0", features = ["terminal_size"]}
thiserror = "1.0.37"
